tests/tests/test_runs/snapshots/test_runs__scalar_3l_cross_section_inspects__scalar_3l_cross_section_gl18_no_numerator_uv_off_threshold_on.snap
---
source: tests/tests/test_runs/scalar_3L_cross_section_inspects.rs
expression: "format!(\"re = {:.17e}\\nim = {:.17e}\", weight.re, weight.im)"
---
re = 2.71015578860717290e-16
im = 0.00000000000000000e0
